# hermes-fusion

./: .env.example  .gitignore  LICENSE  README.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml  nightly-eval.yml
rust/kvflash-cache/: Cargo.toml
rust/kvflash-cache/src/: lib.rs
src/hermes_fusion/: __init__.py  cli.py  cli_template.py  config.py  cost_tracker.py  engine.py  model_router.py  observability.py  ortools_optimizer.py
src/hermes_fusion/eval/: __init__.py  loaders.py  regression.py  runner.py
src/hermes_fusion/providers/: __init__.py  base.py  cloud.py  hailo.py  localai.py  qdrant.py
src/hermes_fusion/strategies/: __init__.py  base.py  best_of_n.py  cot_consensus.py  handoff.py  weighted_vote.py
src/hermes_fusion/templates/: __init__.py  optimization.py  registry.py
tests/: test_cli.py  test_cloud_providers.py  test_config.py  test_cost_tracker.py  test_engine.py  test_eval.py  test_hailo_provider.py  test_localai_provider.py  test_model_router.py  test_observability.py  test_ortools_optimizer.py  test_providers_base.py  test_qdrant_provider.py  test_strategies.py  test_templates.py
