[project]
name = "hermes-fusion"
version = "0.1.0"
description = "Multi-LLM Fusion Engine — OR-Tools optimizer, model router, cost tracking"
authors = [{name = "Sylvain Galliez", email = "zedarvates@github.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
ortools = ["ortools>=9.11"]
dev = ["pytest>=8.0"]
