[package]
name = "hermes-kvflash"
version = "0.1.0"
edition = "2021"
description = "KVFlash-compatible hot cache for Hermes Fusion - rate limiting, sessions, hot KV"
license = "MIT"
repository = "https://github.com/zedarvates/hermes-fusion"
categories = ["cache", "database", "embedded"]
keywords = ["cache", "rate-limit", "session", "kvflash", "lucebox"]

[dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
moka = { version = "0.12", features = ["sync", "future"] }
futures-util = { version = "0.3", optional = true }

# Optional: Python bindings (enabled by default)
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py311"], optional = true }
pyo3-async-runtimes = { version = "0.21", features = ["tokio-runtime"], optional = true }

# NOTE: KVFlash from Lucebox not yet published to crates.io
# When available, uncomment below and add `kvflash = ["dep:kvflash"]` to features:
# kvflash = { version = "0.1", optional = true }

[features]
default = ["python"]
python = ["pyo3", "pyo3-async-runtimes", "dep:futures-util"]
# kvflash = ["dep:kvflash"]  # Enable when lucebox publishes kvflash crate

[lib]
name = "hermes_kvflash"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"